@@ -5,6 +5,7 @@ v0.25 (released 2006.??.??):
 USER-VISIBLE CHANGES:
 * There is now a py2exe version available for Windows, which does not
   require installation of any other software. (emh)
+- Default language changeable via option screen. (emh)
 
 OTHER CHANGES:
 - Deleted some extraneous images and optimized some others. (Phil)
